# personalwebsite

./: ASSETS-NEEDED.md  README.md  index.html  style.css
assets/demo/: aloha_pi05_demo.mov
projects/aloha-pi05-lerobot/: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
projects/aloha-pi05-lerobot/.github/workflows/: tests.yml
projects/aloha-pi05-lerobot/configs/: aloha_mini_teleop.example.yaml  aloha_pro_orin.example.yaml  infer_4090.example.yaml  train_pi05_a100.example.yaml
projects/aloha-pi05-lerobot/docs/: architecture.md  data_collection.md  hardware_setup.md  open_source_release.md  remote_inference_4090_orin.md  safety.md  train_pi05_a100.md
projects/aloha-pi05-lerobot/examples/: bad_episodes.example.txt  fake_remote_inference_demo.py
projects/aloha-pi05-lerobot/scripts/: clean_and_merge_dataset.sh  resume_pi05_a100.sh  start_4090_policy_server.sh  start_orin_robot_client.sh  train_pi05_a100.sh
projects/aloha-pi05-lerobot/src/aloha_lerobot/: __init__.py
projects/aloha-pi05-lerobot/src/aloha_lerobot/dataset_tools/: __init__.py  episode_cleaning.py
projects/aloha-pi05-lerobot/src/aloha_lerobot/remote_inference/: __init__.py  messages.py
projects/aloha-pi05-lerobot/src/aloha_lerobot/teleoperators/: __init__.py  bimanual_so_leader.py
projects/aloha-pi05-lerobot/tests/: test_action_mapping.py  test_episode_cleaning.py
projects/audio-visual-active-speaker-detection/: README.md
projects/dreamzero-world-model/: README.md
projects/finger-camera-grasp-verification/: README.md
projects/openrobot/: README.md
(+7 files in other folders)
